--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
     "stop": "pkill --signal SIGINT ib"
   },
   "dependencies": {
-    "lodash": "^4.17.10"
-  },
-  "devDependencies": {
-    "chalk": "^2.3.0",
-    "matchdep": "^2.0.0",
-    "mocha": "^10.2.0",
-    "moment": "^2.20.1"
+    "chalk": "^4.1.2",
+    "koa": "^2.14.2",
+    "koa-bodyparser": "^4.4.1",
+    "koa-compose": "^4.1.0",
+    "koa-qs": "^3.0.0",
+    "koa-router": "^12.0.1",
+    "koa-static": "^5.0.0",
+    "lodash": "^4.17.21",
+    "moment": "^2.20.1",
+    "ws": "^8.14.2"
   }
 }
